--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="mysql-connector-java-5.1.26/mysql-connector-java-5.1.26-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/jani/git/Dyrnwyn-SEM-GU/Stalker-repository/jcalendarbutton-1.4.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
