Export function using a save file dialog box fixed

--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="external_jars/jcalendarbutton-1.4.5.jar"/>
-	<classpathentry kind="lib" path="external_jars/mysql-connector-java-5.1.22.jar"/>
-	<classpathentry kind="lib" path="external_jars/javax.mail.jar"/>
-	<classpathentry kind="lib" path="external_jars/opencsv-2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="external_jars/javax.mail.jar"/>
+	<classpathentry exported="true" kind="lib" path="external_jars/jcalendarbutton-1.4.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="external_jars/opencsv-2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="external_jars/mysql-connector-java-5.1.22.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
