--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="external_jars/javax.mail.jar"/>
 	<classpathentry exported="true" kind="lib" path="external_jars/mysql-connector-java-5.1.22.jar"/>
 	<classpathentry kind="lib" path="external_jars/jcalendarbutton-1.4.5.jar"/>
+	<classpathentry kind="lib" path="external_jars/jsch-0.1.50.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
